--- a/javascript/index.html
+++ b/javascript/index.html
@@ -11,9 +11,7 @@
     <h3 style="color: white; font-size: 30px; ">let's search here for best university </h3>
     <input type="text" id="btn" name="click">
     <button onclick="submithandler(document.getElementById('btn').value)">submit</button>
-    <div id="news">
-
-    </div>
+    <div id="news"></div>
    
      <script>        
         
